# mlops-dlp

./: .gitignore  README.md  pyproject.toml  run_id.txt
Visual_Summaries/: Visual_Summary.odp  W2-Experiment-Tracking.xcf  rsync_with_remote.txt
mlflow/: mlflow.db
mlflow_db/: mlflow.db
w1_Setup_Cloud_Environment/: README.md  duration_prediction.py
w2_Experiment_Tracking/: README.md  duration_prediction.py  mlflow_commands.md  model_registry.py
w3_Orchestration/: README.md  airflow_pipeline.py  config.py  duration-prediction.py  make_pipeline.py  orchestration_config.json  prefect_pipeline.py  run_examples.sh  run_id.txt  run_pipelines.sh  simple_pipeline.py
w4_Deployment/: Deployment_Docs.md  Docker_Best_Practices.md  README.md
w4_Deployment/4_0_Docker_examples/: Dockerfile  flask_example_01.py
w4_Deployment/4_0_Flask_examples/: flask_example_01.py
w4_Deployment/4_0_dur_pred_no_tracking/: duartion_prediction_simple.py
w4_Deployment/4_3_Streaming/: README.md
w4_Deployment/Docker_examples/: Pipfile
week01/: README.md  duration-prediction.ipynb  duration_prediction.py
week02/: Experiment_Tracking.md  README.md  W2-Experiment-Tracking_v2.xcf  duration_prediction.py  duration_prediction_mlflow.py  duration_prediction_sklearn.py  duration_prediction_xgboost.py  mlflow_commands.md  mlflow_programmatic.ipynb  model_registry.py
week03/: README.md  airflow_pipeline.py  config.py  duration-prediction.py  install_airflow.sh  make_pipeline.py  orchestration_config.json  prefect_pipeline.py  run_examples.sh  run_id.txt  simple_pipeline.py
week04/: README.md
(+30 files in other folders)
