[project]
name = "mlops-dlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "mlflow>=2.22.1",
    "numpy>=2.3.0",
    "optuna>=4.4.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]
